fix: java 8 ofMap Collections.emptyMap()